--- a/frontend/project-vue-cli-app/public/index.html
+++ b/frontend/project-vue-cli-app/public/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="fr">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="favicon.png">
+    <script src="https://kit.fontawesome.com/b99e675b6e.js" crossorigin="anonymous"></script>
+    <title>Réseau social Groupomania</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Nous sommes désolé mais le réseau social Groupomania nécessite l'activation du Javascript. Veuillez l'activer pour accéder à la page </strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
